[WPA-2352]: Prevent payment card info owner name from overflowing

--- a/src/app/shared/payments-card-info/payments-card-info.component.scss
+++ b/src/app/shared/payments-card-info/payments-card-info.component.scss
@@ -27,6 +27,11 @@ $card-height: 151px;
     flex: 1;
   }
 
+  &__owner {
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+
   &--grey {
     color: $blue-grey-3;
   }
